--- a/configs/example.environment.cfg
+++ b/configs/example.environment.cfg
@@ -1,6 +1,6 @@
 # License Key
-sv_licenseKey setme
-set steam_webApiKey "setme"
+sv_licenseKey "cfxk_xex9Q3HGgBogH80i3wkK_4NSFgB"
+set steam_webApiKey "DF818FB5FB7AC7A34DE78ECB3A25A383"
 
 set sv_environment dev # dev/prod/test
 set sv_access_role 0
@@ -10,14 +10,14 @@ setr log_level 1
 # Comment for Listing
 sv_master1 ""
 # Player Slots
-sv_maxclients 8
+sv_maxclients 2
 
 # Set your server's hostname.
-sv_hostname "Mythic RP - Development"
+sv_hostname "Guardian LocalHost"
 # Set your server's Project Name
-sets sv_projectName "Mythic RP - Development"
+sets sv_projectName "Guardian LocalHost"
 # Set your server's Project Description
-sets sv_projectDesc "Mythic RP"
+sets sv_projectDesc "Guardian LocalHost"
 # Server Tags
 sets tags "rp"
 
